Fixing spacing issue

--- a/aho-box-contents/public/assets/css/public.css
+++ b/aho-box-contents/public/assets/css/public.css
@@ -4,6 +4,7 @@
   border: none;
   border-collapse: collapse;
   margin: 10px;
+  width: 40%;
 }
 
 #aho-box-contents table.table th
